<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_home"
            android:title="@string/home"
            android:icon="@drawable/home"/>

        <item
            android:id="@+id/nav_search"
            android:title="@string/search_1"
            android:icon="@drawable/search_icon"/>

        <item
            android:id="@+id/nav_all_categories"
            android:title="@string/all_categories"
            android:icon="@drawable/cato"/>

        <item
            android:id="@+id/nav_add_missing_place"
            android:title="@string/add"
            android:icon="@drawable/add"/>


    </group>

    <item android:title="Profile">
        <menu>

            <group android:checkableBehavior="single">

                <item
                    android:id="@+id/nav_login"
                    android:title="@string/login" />

                <item
                    android:id="@+id/nav_profil"
                    android:title="@string/profile" />

                <item
                    android:id="@+id/nav_logout"
                    android:title="@string/logout" />
            </group>

        </menu>


    </item>
    <item android:title="Share">
        <menu>

            <group android:checkableBehavior="none">

                <item
                    android:id="@+id/nav_share"
                    android:title="@string/share"
                    android:icon="@drawable/share"/>

                <item
                    android:id="@+id/nav_rate_us"
                    android:title="@string/rate_us"
                    android:icon="@drawable/rate"/>

            </group>

        </menu>


    </item>

</menu>